chore: use binary mode as a starting point

--- a/.mvn/wrapper/maven-wrapper.properties
+++ b/.mvn/wrapper/maven-wrapper.properties
@@ -15,5 +15,4 @@
 # specific language governing permissions and limitations
 # under the License.
 wrapperVersion=3.3.1
-distributionType=only-script
-distributionUrl=https://jcenter.bintray.com/org/apache/maven/apache-maven/3.9.7/apache-maven-3.9.7-bin.zip
+distributionUrl=https://fqdn.of.internal.registry/artifactory/Maven-Central-remote/org/apache/maven/apache-maven/3.9.9/apache-maven-3.9.9-bin.zip
