--- a/.mvn/wrapper/maven-wrapper.properties
+++ b/.mvn/wrapper/maven-wrapper.properties
@@ -15,4 +15,5 @@
 # specific language governing permissions and limitations
 # under the License.
 wrapperVersion=3.3.1
+distributionType=only-script
 distributionUrl=https://repo1.apache.org/maven2/org/apache/maven/apache-maven/3.9.7/apache-maven-3.9.7-bin.zip
